<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<RelativeLayout 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:orientation="vertical">    
        
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
     </FrameLayout>
     <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:visibility="gone"/>

     <!-- Frame下放置单选群组替代TAB效果 --> 
        <RadioGroup 
            android:id="@+id/main_radio" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:background="@color/actionbar_color" 
            android:gravity="center_vertical" 
            android:orientation="horizontal" 
            android:layout_alignParentBottom="true" > 
   
            <RadioButton 
                android:id="@+id/ic_tab_1" 
                style="@style/main_tab_bottom" 
                android:checked="true" 
                android:drawableTop="@drawable/ic_tab_1_selector" 
                android:text="@string/actionbar_title1" /> 
   
            <RadioButton 
                android:id="@+id/ic_tab_2" 
                style="@style/main_tab_bottom" 
                android:checked="false" 
                android:drawableTop="@drawable/ic_tab_2_selector" 
                android:text="@string/actionbar_title2" /> 
   
            <RadioButton 
                android:id="@+id/ic_tab_3" 
                style="@style/main_tab_bottom" 
                android:checked="false" 
                android:drawableTop="@drawable/ic_tab_3_selector" 
                android:text="@string/actionbar_title3" /> 
                
            <RadioButton 
                android:id="@+id/ic_tab_4" 
                style="@style/main_tab_bottom" 
                android:visibility="gone"
                android:drawableTop="@drawable/ic_tab_3_selector" 
                android:text="@string/actionbar_title4" /> 
   
        </RadioGroup> 
        
    </RelativeLayout> 
</TabHost>