<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@color/transparent_80"
    android:orientation="vertical">

    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="20dp"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"> 
     <TextView
        android:text="@string/dialog_warning_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>   
    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/dialog_warning_content"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_warning"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/btn_warning"
        android:gravity="center"
        android:text="@string/dialog_warning_btn"
        android:textColor="#ffff00"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>
    </LinearLayout>
</LinearLayout>
